--- a/Basic/mqtt_Rest.html
+++ b/Basic/mqtt_Rest.html
@@ -1,9 +1,9 @@
 <!DOCTYPE html>
 <html lang="ko">
 <head>
-<meta charset="UTF-8" />
+<meta charset="UTF-8">
 <meta name="viewport" content="width=device-width, initial-scale=1.0, user-scalable=no">
-<title>ESP32 MQTT IP + Reset</title>
+<title>ESP32 MQTT IP + Soft Reset</title>
 <script src="https://unpkg.com/mqtt/dist/mqtt.min.js"></script>
 <style>
   body {
@@ -11,7 +11,7 @@
     display: flex;
     flex-direction: column;
     align-items: center;
-    padding: 20px;
+    padding: 10px;
     margin: 0;
     background-color: #f5f5f5;
     min-height: 100vh;
@@ -20,32 +20,32 @@
 
   h2 {
     text-align: center;
-    margin-bottom: 20px;
-    font-size: 1.8em;
+    margin-bottom: 15px;
+    font-size: 1.4em; /* 축소된 제목 폰트 */
   }
 
   #ip-container {
-    margin-bottom: 20px;
+    margin-bottom: 15px;
     text-align: center;
+    font-size: 1em; /* IP 폰트 축소 */
   }
 
   #ip {
     font-weight: bold;
     color: #1a73e8;
-    font-size: 1.4em;
   }
 
   #btnReset {
-    padding: 18px 30px;
-    font-size: 1.2em;
+    padding: 12px 20px;
+    font-size: 1em; /* 버튼 폰트 축소 */
     background-color: #1a73e8;
     color: white;
     border: none;
-    border-radius: 12px;
+    border-radius: 10px;
     cursor: pointer;
-    margin-bottom: 20px;
+    margin-bottom: 15px;
     width: 80%;
-    max-width: 300px;
+    max-width: 250px;
     transition: background-color 0.2s;
   }
 
@@ -60,17 +60,17 @@
 
   #log {
     width: 100%;
-    max-width: 400px;
+    max-width: 350px;
     background-color: #ffffff;
     border: 1px solid #ccc;
-    border-radius: 12px;
-    padding: 12px;
+    border-radius: 10px;
+    padding: 10px;
     font-family: monospace;
-    font-size: 0.9em;
+    font-size: 0.8em; /* 로그 폰트 축소 */
     color: #333;
     white-space: pre-wrap;
     overflow-y: auto;
-    max-height: 300px;
+    max-height: 200px; /* 모바일 세로 화면에 맞춤 */
     box-sizing: border-box;
   }
 </style>
@@ -81,7 +81,7 @@
 
 <div id="ip-container">ESP32 IP: <span id="ip">-</span></div>
 
-<button id="btnReset" disabled>🔄 ESP32 Reset</button>
+<button id="btnReset" disabled>🔄 Reset</button>
 
 <div id="log"></div>
 
@@ -89,10 +89,10 @@
 const log = msg => {
   const logDiv = document.getElementById("log");
   logDiv.textContent += msg + "\n";
-  logDiv.scrollTop = logDiv.scrollHeight;
+  logDiv.scrollTop = logDiv.scrollHeight; // 자동 스크롤
 };
 
-// MQTT 연결
+// MQTT 연결 설정
 const options = {
   username: "mqtt_ESP32",
   password: "gomqtt_ESP32",
